added color variables

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <li><a href="#">Home</a></li>
       </ul>
     </nav>
-    <main>
-      <div id="main-content" class="flex-container">
+    <main id="main-content">
 
-      </div>
 
     </main>
     <footer>
