--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 
 <body>
   <div class="container">
-    <header>
+    <header id="home">
       <h1>Landing Page</h1>
+      <div id="hamburger-menu">
+        <div class="burger-bar"></div>
+        <div class="burger-bar"></div>
+        <div class="burger-bar"></div>
+      </div>
     </header>
     <nav>
       <ul id="main-nav-list">
-        <li><a href="#">Home</a></li>
+        <li><a href="#Home">Home</a></li>
       </ul>
     </nav>
     <main id="main-content">
