--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Landing Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Poppins:wght@300;500&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" media="screen" href="css/normalize.css" />
   <link rel="stylesheet" media="screen" href="css/styles.css" />
 
