refactored html and css

--- a/index.html
+++ b/index.html
@@ -14,29 +14,46 @@
 </head>
 
 <body>
+  <!-- Grid Container -->
   <div class="container">
+
+    <!-- Header -->
     <header id="home">
       <h1>Landing Page</h1>
+      <!-- Hambureger Menu For Mobile Devices -->
       <div id="hamburger-menu">
         <div class="burger-bar"></div>
         <div class="burger-bar"></div>
         <div class="burger-bar"></div>
       </div>
     </header>
+    <!-- End Header -->
+
+    <!-- Main Nav - Hidden on mobile until icon is clicked -->
     <nav>
+      <!-- Nav List created dynamically -->
       <ul id="main-nav-list">
         <li><a href="#Home">Home</a></li>
       </ul>
     </nav>
+    <!-- End Nav -->
+
+    <!-- Main Content Container -->
     <main id="main-content">
 
+      <!-- Content created dynamically -->
 
     </main>
+    <!-- End Main -->
+
+    <!-- Footer -->
     <footer>
       &copy;2020 JD
     </footer>
+    <!-- End Footer -->
 
   </div>
+  <!-- End Grid Container -->
 
 
   <script src="js/app.js"></script>
