event listener for if section is in viewport

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav>
       <!-- Nav List created dynamically -->
       <ul id="main-nav-list">
-        <li><a href="#Home">Home</a></li>
+        <li class="nav-item"><a href="#Home" class="nav-link">Home</a></li>
       </ul>
     </nav>
     <!-- End Nav -->
