added style changes in viewport

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
 
     <!-- Header -->
-    <header id="home">
+    <header>
       <h1>Landing Page</h1>
       <!-- Hambureger Menu For Mobile Devices -->
       <div id="hamburger-menu">
@@ -33,7 +33,7 @@
     <nav>
       <!-- Nav List created dynamically -->
       <ul id="main-nav-list">
-        <li class="nav-item"><a href="#Home" class="nav-link">Home</a></li>
+
       </ul>
     </nav>
     <!-- End Nav -->
